fixed spacing css for edit-recipe

--- a/Recipe/src/app/edit-playlist/edit-playlist.component.css
+++ b/Recipe/src/app/edit-playlist/edit-playlist.component.css
@@ -57,7 +57,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    width: 60%;
+    width: 90%;
   }
 
   .deleteOption {
@@ -68,7 +68,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    width: 60%;
+    width: 90%;
     background-color: rgb(248, 83, 83);
   }
 
